<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Miroris</string>
    <string name="toolbar_name">MiroRIS</string>
    <string name="username_hint">Email/No. Handphone/Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="no_handphone">No. Handpohne</string>
    <string name="kota">Kota</string>
    <string name="data_rekening">Data Rekening</string>
    <string name="bank">Bank</string>
    <string name="nomor_rekening">Nomor rekening</string>
    <string name="save_changes">Save Changes</string>
    <string name="rubah_password">Rubah password</string>
    <string name="informasi_personal">Informasi Personal</string>
    <string name="mini_detail_product_image">Mini detail product image</string>
    <string name="bank_spinner">Bank Spinner</string>
    <string name="share">Share</string>
    <string name="link">Link</string>
    <string name="download">Download</string>
    <string name="detail_product_image">detail product image</string>
    <string name="item_product_banner">item product banner</string>
    <string name="select_category">select category</string>
    <string name="filter">FILTER</string>
    <string name="rating_of_item">rating of item</string>
    <string name="image_of_item">image of item</string>
    <string name="switch_to_grid">switch to grid</string>
    <string name="switch_to_list">switch to list</string>
    <string name="right_chevron">right chevron</string>
    <string name="account">Account</string>
    <string name="continue_add_product">Continue</string>
    <string name="fund">Pendanaan</string>
    <string name="fund_detail">Detail Pendanaan</string>
    <string name="add_your_product_here">add your product here</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_desc">Deskripsi Produk</string>
    <string name="own_account">Rekening Sendiri</string>
    <string name="produk_and_rekening"><![CDATA[Produk & Rekening]]></string>
    <string name="product">Produk</string>
    <string name="press_to_capture_image">press to capture image</string>
    <string name="switch_to_front_camera">switch to front camera</string>
    <string name="permission_not_granted">Permission request denied</string>
    <string name="failed_focus_camera">Auto focus camera failed because %1$s</string>
    <string name="failed_start_camera">Start camera failed because %1$s</string>
    <string name="failed_to_get_image_from_gallery">Get image from gallery failed because %1$s</string>
    <string name="image_from_camera">image from camera</string>
    <string name="accept_image">Accept Image</string>
    <string name="delete_image">delete image</string>
    <string name="tab_to_manage_product">Tab to manage product</string>
    <string name="starting_fund">Mulai Pendanaan</string>
    <string name="ending_fund">Berakhir Pendanaan</string>
    <string name="close_the_dialog">close the dialog</string>
    <string name="person_that_warn_you">person that warn you</string>
    <string name="ok">OK</string>
    <string name="check_internet_condition">Please check your internet connection</string>
    <string name="default_error_message">The application has encountered an unknown error.</string>
    <string name="encryption_error_message">The application has encountered error related to encryption or decryption.</string>
    <string name="error_token_dialog_title">Internal Error</string>
    <string name="download_done_dialog_title">Download Done</string>
    <string name="username_error">Username must be filled</string>
    <string name="password_error">Password must be filled</string>
    <string name="current_password_error">Current password must be filled</string>
    <string name="new_password_error">New password must be filled</string>
    <string name="address_error">Address must be filled</string>
    <string name="phone_error">Phone number must be filled</string>
    <string name="city_error">City must be filled</string>
    <string name="acc_num_error">Account number must be filled</string>
    <string name="cfm_password_error">Confirm password must be filled</string>

    <string-array name="default_bank_spinner">
        <item>BCA</item>
        <item>Mandiri</item>
        <item>BRI</item>
        <item>BNI</item>
    </string-array>

    <string-array name="default_product_category">
        <item>Category</item>
    </string-array>
</resources>