<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarHome"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/miroris_toolbar_menu"
        app:navigationIcon="@drawable/img_small_logo"
        app:title="@string/toolbar_name">

    </com.google.android.material.appbar.MaterialToolbar>

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/rvHomeBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/guideline32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHome"
        tools:listitem="@layout/item_product_banner" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svHomeProduct"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toBottomOf="@+id/rvHomeBanner"
        app:queryHint="Search something ..." />


    <Spinner
        android:id="@+id/spHomeCategory"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/select_category"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toBottomOf="@+id/svHomeProduct" />

    <ImageView
        android:id="@+id/ivHomeSelectGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/switch_to_grid"
        android:src="@drawable/sharp_grid_view_24"
        app:layout_constraintBottom_toBottomOf="@+id/spHomeCategory"
        app:layout_constraintEnd_toStartOf="@+id/ivHomeSelectList"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spHomeCategory"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toBottomOf="@+id/svHomeProduct" />

    <ImageView
        android:id="@+id/ivHomeSelectList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/switch_to_list"
        android:src="@drawable/round_view_list_24"
        app:layout_constraintBottom_toBottomOf="@+id/spHomeCategory"
        app:layout_constraintEnd_toStartOf="@+id/tvHomeFilterProduct"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivHomeSelectGrid"
        app:layout_constraintTop_toBottomOf="@+id/svHomeProduct" />

    <TextView
        android:id="@+id/tvHomeFilterProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/filter"
        android:textColor="#6c92f4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spHomeCategory"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintStart_toEndOf="@+id/ivHomeSelectList"
        app:layout_constraintTop_toBottomOf="@+id/svHomeProduct" />

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/rvHomeProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toBottomOf="@+id/spHomeCategory"
        tools:listitem="@layout/item_product" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>