<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#ECECEC"
                app:layout_constraintBottom_toTopOf="@+id/guideline23"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivUserEditProfile"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline23"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundCustomCorner"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_a_photo_24"
                app:layout_constraintBottom_toBottomOf="@+id/ivUserEditProfile"
                app:layout_constraintEnd_toEndOf="@+id/ivUserEditProfile"
                app:layout_constraintStart_toStartOf="@+id/ivUserEditProfile"
                app:layout_constraintTop_toTopOf="@+id/ivUserEditProfile" />


            <TextView
                android:id="@+id/tvPersonalUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/informasi_personal"
                android:textColor="@color/black"
                android:textSize="@dimen/letter_xlarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/view2" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUsernameEditProfileLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toStartOf="@+id/guideline24"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonalUser">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUsernameEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailEditProfileLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toEndOf="@+id/textInputUsernameEditProfileLayout"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonalUser">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmailEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAddressEditProfileLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/textInputUsernameEditProfileLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputAddressEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPhoneNumberEditProfileLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toStartOf="@+id/textInputCityEditProfileLayout"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/textInputAddressEditProfileLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPhoneNumberEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_handphone"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCityEditProfileLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="@+id/guideline21"
                app:layout_constraintStart_toEndOf="@+id/textInputPhoneNumberEditProfileLayout"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toBottomOf="@+id/textInputAddressEditProfileLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputCityEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kota"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/data_rekening"
                android:textColor="@color/black"
                android:textSize="@dimen/letter_xlarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/textInputPhoneNumberEditProfileLayout" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bank"
                android:textSize="@dimen/letter_xsmall"
                app:layout_constraintEnd_toEndOf="@+id/guideline21"
                app:layout_constraintStart_toEndOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Spinner
                android:id="@+id/spBankSelection"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:contentDescription="Bank Spinner"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/btn_grey"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/spBankSelection" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconDrawable="@drawable/baseline_search_24"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                app:startIconDrawable="@drawable/baseline_check_24"
                app:startIconTint="#72DFC5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomor_rekening"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"
                app:backgroundTint="@color/button_blue"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

            <TextView
                android:id="@+id/tvChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rubah_password"
                app:layout_constraintBottom_toTopOf="@+id/guideline22"
                app:layout_constraintEnd_toStartOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/btnSaveChange" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
